# googlecalendar-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.ja.md  README.md  SECURITY.md  Secrets.dev.toml.example  Secrets.toml.example  Shuttle.toml  agent.md  caddyfile.example  mcp-inspector.json  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codex-ci.yml  release.yml
.serena/: project.yml
config/: config.toml
docs/: api_reference.md  codex-integration.md  deployment_cloudrun.md  deployment_shuttle.md  design.md  lessons.md  security.md  testing.md  usage_guide.md
src/: lib.rs  main.rs  token_ingest.rs
src/config/: mod.rs
src/google_calendar/: mod.rs
src/handlers/: mod.rs
src/mcp/: mod.rs
src/oauth/: mod.rs  storage.rs
src/proxy/: mod.rs
