[package]
name = "mcp_google_calendar"
version = "0.1.0"
edition = "2021"
authors = ["mcp-google-calendar contributors"]
description = "MCP server for Google Calendar with OAuth 2.0 support - Bridge AI agents to Calendar API"
license = "MIT"
repository = "https://github.com/kamekamek/mcp-google-calendar"
homepage = "https://github.com/kamekamek/mcp-google-calendar"
documentation = "https://github.com/kamekamek/mcp-google-calendar/tree/main/docs"
readme = "README.md"
keywords = ["mcp", "google-calendar", "oauth", "ai-agents", "calendar"]
categories = ["api-bindings", "web-programming", "authentication"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
dotenvy = "0.15"
oauth2 = { version = "4.4", default-features = false, features = ["reqwest", "rustls-tls", "pkce-plain"] }
once_cell = "1.19"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "0.8.1", features = ["server", "schemars", "transport-sse-server"] }
schemars = { version = "1.0", features = ["chrono04"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono"], optional = true }
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

# Shuttle.dev dependencies (optional for deployment)
shuttle-runtime = { version = "0.57", optional = true }
shuttle-axum = { version = "0.57", optional = true }
shuttle-shared-db = { version = "0.57", default-features = false, optional = true, features = ["postgres", "sqlx"] }

[features]
default = []
shuttle = ["shuttle-runtime", "shuttle-axum", "shuttle-shared-db", "sqlx"]

[dev-dependencies]
tempfile = "3.9"

[[bin]]
name = "shuttle"
path = "src/bin/shuttle.rs"
required-features = ["shuttle"]
